Update 4GB-start.sh
optimized memory args.